<resources>
    <string name="app_name">BOSS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_title">Ascending Sorting</string>
    <string name="switch_summary">On for alphabetically ascending, off for descending</string>
    <string name="notifications_enabled">Enable battery notifications</string>
    <string name="notifications_enabled_summary">Elect to enable battery notifications</string>
    <string name="threshold_title">Battery percentage threshold</string>
    <string name="threshold_summary">Percent battery to be notified at:</string>
    <string name="charging_status">Charging status:</string>
    <string name="time_to_charge">Time to charge</string>
</resources>